<resources>
    <string name="app_name">tamboon</string>
    <string name="button_donation" formatted="false">Donate %s Baht</string>
    <string name="label_amount_donation">Amount</string>
    <string name="label_donation_to" formatted="false">Donate to %s</string>
    <string name="button_please_fill_donation_amount">Fill amount for donation</string>
    <string name="title_donate_successfully">Successfully!</string>
    <string name="message_donate_successfully">You\'ve already donated %s baht to %s.</string>
    <string name="button_back_to_home">Back to Home</string>
</resources>