<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/imageViewCharityThumbnail"
        android:layout_width="match_parent"
        tools:src="@tools:sample/avatars"
        tools:scaleType="centerCrop"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/textViewDonationTo"
        android:background="#1f000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewCharityThumbnail" />

    <TextView
        android:id="@+id/textViewDonationTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_donation_to"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/editTextDonationAmount"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <EditText
        android:id="@+id/editTextDonationAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="end"
        android:hint="@string/label_amount_donation"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/buttonDonation"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/textViewDonationTo"
        app:layout_constraintVertical_bias="0" />


    <Button
        android:id="@+id/buttonDonation"
        android:layout_width="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/editTextDonationAmount"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/button_please_fill_donation_amount"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />

</androidx.constraintlayout.widget.ConstraintLayout>